# her

./: .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml  implementation-plan.md  prd.md  tasks.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241130_0001_001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  lsoa.py  priorities.py  routes.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  lsoa.py  organization.py  priority.py  route.py
backend/app/services/data_ingestion/: __init__.py  seed_database.py  synthetic_generator.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py
backend/tests/unit/: test_auth.py
infrastructure/nginx/: nginx.conf
infrastructure/postgres/: init.sql
